# pantheon

./: .gitignore  DOCUMENTATION.md  README.md  SCOPE.md  TODO.md  constants.py  data_interface.py  desi_riemann_synthesis.py  mypy.ini  pyproject.toml  requirements.md  requirements.txt  riemann_resonance_cosmology.py  run_analysis.py  scrub_unicode.py  spandrel_cosmology.py  spandrel_cosmology_hpc.py  spandrel_joint_analysis.py  spandrel_visualization.py  spandrel_visuals.py  unified_experiment.txt
.github/workflows/: paper.yml  tests.yml
_archive/: README.md  riemann_hydro_ddt.py
ddt_solver/: __init__.py  eos_white_dwarf.py  flux_hllc.py  main_zeldovich.py  nickel_yield.py  reaction_carbon.py
docs/: DOCUMENTATION.md  SCOPE.md
docs/paper/: .latexmkrc  Makefile  README.md  references.bib
docs/paper/figures/: contour_H0_Om.tex  ddt_evolution.tex  ddt_structure.tex  hubble_diagram.tex  nuclear_network.tex  riemann_snake.tex  (+1 more)
docs/references/: research_2025.md
elevated/: __init__.py  alpha_chain_network.py  ddt_parameter_study.py  light_curve_synthesis.py  model_comparison.py  run_all.py
paper/: Makefile  README.md  spandrel_paper.tex
paper/figures/: contour_H0_Om.tex  eos_gamma.tex  hubble_diagram.tex  kolmogorov_cascade.tex  riemann_snake.tex  spandrel_correction.tex
results/: analysis_summary.txt  synthesis_log.txt  total_residuals.csv
src/spandrel/: __init__.py  cli.py
synthesis/: future_physics.py  phillips_from_turbulence.py  turbulent_flame_theory.py  unified_experiment.py
tests/: test_cosmology.py  test_data_interface.py  test_eos.py  test_flux.py  test_reactions.py
(+27 files in other folders)
